# JoyShockMapper

./: .gitignore  README.md
JSM_GUI/jsm-gui-app/: electron-builder.json5  package-lock.json  package.json  window-state.json
JSM_GUI/jsm-gui-app/dist-electron/: main.js  preload.mjs
JSM_GUI/jsm-gui-app/electron/: electron-env.d.ts  main.ts  preload.ts
JSM_GUI/jsm-gui-app/native/console-injector/: CMakeLists.txt  README.md
JSM_GUI/jsm-gui-app/native/console-injector/src/: ConsoleInjector.cpp
JSM_GUI/jsm-gui-app/src/: App.css  App.tsx  index.css
JSM_GUI/jsm-gui-app/src/components/: AccelSensForm.tsx  BindingRow.tsx  CalibrationCard.tsx  Card.tsx  ConfigEditor.tsx  CurvePreview.tsx  GyroBehaviorControls.tsx  KeymapControls.tsx  NoiseSteadyingControls.tsx  ProfileManager.tsx  SectionActions.tsx  SensitivityControls.tsx  SensitivityGraph.tsx  StaticSensForm.tsx  StickSettingsCard.tsx  TelemetryBanner.tsx
JSM_GUI/legacy-ref/: index.html  main.js  preload.js
JSM_GUI/legacy-ref/assets/: style.css
JoyShockMapper/: CMakeLists.txt
JoyShockMapper/include/: JoyShockMapper.h  PlatformDefinitions.h  PowerCurve.h  QuadraticCurve.h  SigmoidCurve.h  Telemetry.h
JoyShockMapper/src/: DigitalButton.cpp  Mapping.cpp  PowerCurve.cpp  QuadraticCurve.cpp  SDLWrapper.cpp  SigmoidCurve.cpp  Telemetry.cpp  main.cpp
JoyShockMapper/src/linux/: PlatformDefinitions.cpp
JoyShockMapper/src/win32/: PlatformDefinitions.cpp
JoyShockMapper/tests/: power_curve_tests.cpp  quadratic_curve_tests.cpp  sigmoid_curve_tests.cpp
script/: telemetry_dump.py
(+5 files in other folders)
